Fixing basic CRUD and first run improvements

--- a/LayeredWebApp/App.Service.Api/appsettings.Development.json
+++ b/LayeredWebApp/App.Service.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppDatabase": "Server=(localdb)\\ProjectsV13;Database=App.Database;Trusted_Connection=True;"
+    "AppDatabase": "Server=(localdb)\\MSSQLLocalDB;Database=SampleDB;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
